# showcase-with-3d-mesh-data

./: .gitignore  CMakeLists.txt  README.md
src/: basereader.cpp  basewriter.cpp  bwriter.cpp  main.cpp  mesh.cpp  read_obj.cpp  twriter.cpp  write_stl.cpp
src/include/: basereader.h  basewriter.h  bwriter.h  mesh.h  read_obj.h  twriter.h  util.h  write_stl.h
